--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action='/submit' method='post'>
+		<label for="name">Name</label>
+		<input type='text' minlength='3',maxlength='50', required id='name'>
+		<label for='portfolio'>Portfolio</label>
+		<input type='url' id='portfolio' required>
+		<label for='favColor'>Favorite Color</label>
+		<input id='favColor' type='color'>
+		<label for='likeness'>Likeness</label>
+		<input type='range' min='1' max='100'>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
