--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Feedback Form</h1>
 	<form action='/submit' method='post'>
 		<label for="name">Name</label>
 		<input type='text' minlength='3',maxlength='50', required id='name'>
