--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<h1>Feedback Form</h1>
 	<form action='/submit' method='post'>
 		<label for="name">Name</label>
-		<input type='text' minlength='3',maxlength='50', required id='name'>
+		<input type='text' minlength="3" maxlength="50" required id='name'>
 		<label for='portfolio'>Portfolio</label>
 		<input type='url' id='portfolio' required>
 		<label for='favColor'>Favorite Color</label>
