--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		<label for='favColor'>Favorite Color</label>
 		<input id='favColor' type='color'>
 		<label for='likeness'>Likeness</label>
-		<input type='range' min='1' max='100'>
+		<input id='likeness' type='range' min='1' max='100'>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
